# asyoulikeit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  test.yml
docs/: api.rst  cli.rst  conf.py  index.rst  usage.rst
scripts/: generate_readme.py  readme_template.md.j2
scripts/examples/: arden-dukes.py  henry-wives.py  quickstart.py
src/aspects/: __init__.py  _text.py  cli.py  exceptions.py  extension.py  formatter.py  tabular_data.py
src/aspects/ext/formatters/display/: __init__.py  formatter.py
src/aspects/ext/formatters/json/: formatter.py
src/aspects/ext/formatters/table/: __init__.py  formatter.py
src/aspects/ext/formatters/tsv/: formatter.py
src/asyoulikeit/: __init__.py  _text.py  audience.py  cli.py  content.py  exceptions.py  extension.py  formatter.py  scalar_data.py  tabular_data.py  tree_data.py
src/asyoulikeit/ext/formatters/display/: formatter.py
src/asyoulikeit/ext/formatters/json/: __init__.py  formatter.py
src/asyoulikeit/ext/formatters/tsv/: __init__.py  formatter.py
tests/: test_audience.py  test_cli.py  test_formatters.py  test_output.py  test_scalar_data.py  test_tabular_data.py  test_tree_data.py
