[project]
name = "aspects"
version = "0.1.0"
description = "Configurable CLI report aspects for Python projects."
readme = "README.md"
authors = [
    { name = "Robert Smallshire", email = "systems+aspects@sixty-north.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "click-option-group",
    "rich",
    "stevedore",
]

[project.entry-points."aspects.formatter"]
display = "aspects.ext.formatters.display:Formatter"
tsv = "aspects.ext.formatters.tsv:Formatter"
json = "aspects.ext.formatters.json:Formatter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
]
