[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aspects"
dynamic = ["version"]
authors = [
    { name = "Robert Smallshire", email = "systems+aspects@sixty-north.com" },
]
description = "Configurable CLI report aspects for Python projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "click>=8.0",
    "click-option-group",
    "rich",
    "stevedore",
]

[project.urls]
Homepage = "https://github.com/sixty-north/aspects"
Repository = "https://github.com/sixty-north/aspects"
Issues = "https://github.com/sixty-north/aspects/issues"

[project.entry-points."aspects.formatter"]
display = "aspects.ext.formatters.display:Formatter"
tsv = "aspects.ext.formatters.tsv:Formatter"
json = "aspects.ext.formatters.json:Formatter"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "aspects.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aspects = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest>=8",
]
dev = [
    "bump-my-version>=0.28",
    { include-group = "test" },
]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
commit = true
message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
files = [
    { filename = "src/aspects/__init__.py" },
]
