[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asyoulikeit"
dynamic = ["version"]
authors = [
    { name = "Robert Smallshire", email = "systems+asyoulikeit@sixty-north.com" },
]
description = "Multi-format report output for Python command-line tools."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "click>=8.0",
    "click-option-group",
    "rich",
    "stevedore",
]

[project.urls]
Homepage = "https://github.com/sixty-north/asyoulikeit"
Documentation = "https://sixty-north.github.io/asyoulikeit/"
Repository = "https://github.com/sixty-north/asyoulikeit"
Issues = "https://github.com/sixty-north/asyoulikeit/issues"

[project.entry-points."asyoulikeit.formatter"]
display = "asyoulikeit.ext.formatters.display:Formatter"
tsv = "asyoulikeit.ext.formatters.tsv:Formatter"
json = "asyoulikeit.ext.formatters.json:Formatter"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "asyoulikeit.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asyoulikeit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest>=8",
]
docs = [
    "sphinx>=8",
    "sphinx-rtd-theme>=2",
    "sphinx-copybutton>=0.5",
]
dev = [
    "bump-my-version>=0.28",
    "jinja2>=3.1",
    "pre-commit>=3",
    { include-group = "test" },
]

[tool.bumpversion]
current_version = "1.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
commit = true
message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
files = [
    { filename = "src/asyoulikeit/__init__.py" },
]
